open /posts/get and /wall
